--- a/src/app/candidatos/create-candidate/create-candidate.component.scss
+++ b/src/app/candidatos/create-candidate/create-candidate.component.scss
@@ -3,6 +3,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  padding: 10%;
   @include button();
   @include title();
   padding: 0px 10px;
@@ -40,7 +42,7 @@
       }
     }
     width: 100%;
-    height: 5%;
+    height: 10%;
     display: flex;
     justify-content: space-between;
     button {
@@ -55,9 +57,26 @@
     align-items: flex-start;
     justify-content: center;
     form {
+      position: relative;
+      gap: 20px;
+      button {
+        position: absolute;
+        bottom: 0;
+      }
+      .first_part_container {
+        height: 100%;
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .second_part_container {
+        height: 100%;
+        width: 50%;
+        flex-direction: column;
+        display: flex;
+      }
       display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
       height: 100%;
       .form-controller {
         margin-bottom: 5px;
