--- a/src/app/elecciones/elecciones-card/elecciones-card.component.html
+++ b/src/app/elecciones/elecciones-card/elecciones-card.component.html
@@ -1,4 +1,4 @@
-<div class="card mat-elevation-z5">
+<div class="card mat-elevation-z5" (click)="openEdit()">
   <h1>{{ election.description }}</h1>
   <p>{{ election.votingStatus }}</p>
   <div class="fechas">
