--- a/src/app/elecciones/elecciones-card/elecciones-card.component.scss
+++ b/src/app/elecciones/elecciones-card/elecciones-card.component.scss
@@ -1,30 +1,37 @@
 @import "src/assets/styles/styles.scss";
 
-.card{
-    @include title();
-    @include paragraph();
-    width: 25vw;
-    height: 250px;
-    border-radius: 44px;
-    border: 2px solid #74AFB7;
-    margin: 0px 10px 0px 10px;
+.card {
+  @include title();
+  @include paragraph();
+  width: 25vw;
+  height: 250px;
+  border-radius: 44px;
+  border: 2px solid #74afb7;
+  margin: 0px 10px 0px 10px;
+  display: flex;
+  flex-direction: column;
+  padding: 10%;
+  align-items: flex-start;
+  cursor: pointer;
+  transition: all ease 250ms;
+  justify-content: center;
+  h1 {
+    margin: 0;
+    font-size: 1.5rem;
+  }
+  p {
+    margin: 0;
+    font-size: 1.2rem;
+  }
+  .fechas {
     display: flex;
-    flex-direction: column;
-    padding: 10%;
-    align-items: flex-start;
-    justify-content: center ;
-    h1{
-        margin: 0;
-        font-size: 1.5rem;
+    p {
+      color: gray;
+      font-size: 1.1rem;
     }
-    p{
-        margin: 0;
-        font-size: 1.2rem;
-    }
-    .fechas{
-        display: flex;
-        p{color: gray;
-            font-size: 1.1rem;
-        }
-    }
+  }
+}
+
+.card:hover {
+  transform: scale(1.05);
 }
