--- a/src/app/elecciones/create-election/create-election.component.html
+++ b/src/app/elecciones/create-election/create-election.component.html
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div class="form-controller">
-        <label>Fecha de Creacion</label>
+        <label>Fecha de Votacion</label>
         <div class="form-container">
           <input formControlName="date" type="date" />
         </div>
