--- a/src/app/elecciones/elecciones.component.html
+++ b/src/app/elecciones/elecciones.component.html
@@ -34,6 +34,7 @@
       <app-elecciones-card
         *ngFor="let eleccion of eleccionesPasadas"
         [election]="eleccion"
+        (resultEmitter)="this.initialize()"
       ></app-elecciones-card>
     </div>
   </div>
