--- a/src/app/votantes/votante-card/votante-card.component.html
+++ b/src/app/votantes/votante-card/votante-card.component.html
@@ -1,10 +1,11 @@
-<div class="card mat-elevation-z4" (click)="openEdit()">
+<div class="card mat-elevation-z4">
   <h1>{{ votante.name }}</h1>
   <h1>{{ votante.lastName }}</h1>
   <p>{{ votante.dni }}</p>
   <button (click)="registerFingerprint()">
     {{ hasFingerprinrt ? "Sobreescribir Huella" : "Registrar Huella" }}
   </button>
+  <button (click)="openEdit()">Editar</button>
   <div class="voted" *ngIf="votante.voted != undefined">
     <p>Ha votado:</p>
     <h1>{{ votante.voted ? "Si" : "No" }}</h1>
