--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800&display=swap");
-$buttonColor: #3a3cac;
+$buttonColor: #393bac;
 $secondButtonColor: #74afb7;
 
 $buttonOnHoverColor: #a3581a;
