--- a/src/app/elecciones/elecciones-card/elecciones-card.component.scss
+++ b/src/app/elecciones/elecciones-card/elecciones-card.component.scss
@@ -5,6 +5,7 @@
   @include paragraph();
   width: 25vw;
   height: 250px;
+  background-color: white;
   border-radius: 44px;
   border: 2px solid #74afb7;
   margin: 0px 10px 0px 10px;
