--- a/src/app/partidos/create-partido/create-partido.component.scss
+++ b/src/app/partidos/create-partido/create-partido.component.scss
@@ -67,6 +67,18 @@
         margin-bottom: 5px;
       }
       .form-controller.status {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        button {
+          width: 200px;
+          height: 40px;
+        }
+        .text {
+          display: flex;
+          flex-direction: column;
+        }
         p {
           text-align: start;
           margin: 10px 0;
