--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "src/assets/styles/styles.scss";
 
 html,
 body {
@@ -16,7 +17,13 @@ body {
 
 .green-snackbar {
   background: #5dac5f;
+  font-family: $titleFont;
+  color: white;
+  font-size: 1.5rem;
 }
 .red-snackbar {
   background: red;
+  font-family: $titleFont;
+  color: white;
+  font-size: 1.5rem;
 }
