--- a/src/app/estadisticas/estadisticas.component.scss
+++ b/src/app/estadisticas/estadisticas.component.scss
@@ -38,6 +38,22 @@
     scroll-snap-type: x mandatory;
     overflow: hidden;
   }
+  .main-charts {
+    margin-top: 2%;
+    h1 {
+      font-size: 2rem;
+    }
+    p {
+      font-size: 1.5rem;
+    }
+    .chart-elections {
+      display: grid;
+      padding: 5% 0;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 20px;
+      grid-auto-rows: minmax(250px, auto);
+    }
+  }
   .title {
     display: flex;
     align-items: center;
