--- a/src/app/partidos/create-partido/create-partido.component.html
+++ b/src/app/partidos/create-partido/create-partido.component.html
@@ -28,7 +28,7 @@
         <div class="form-container">
           <input
             formControlName="description"
-            placeholder="Ingrese su apellido"
+            placeholder="Ingrese la descripcion del partido"
             type="text"
           />
           <mat-icon>description</mat-icon>
