--- a/src/app/candidatos/create-candidate/create-candidate.component.html
+++ b/src/app/candidatos/create-candidate/create-candidate.component.html
@@ -1,6 +1,10 @@
 <div class="container">
   <div class="header">
-    <h1>Registrar Candidato</h1>
+    <h1>
+      {{
+        candidate.name.length > 0 ? "Editar Candidato" : "Registrar Candidato"
+      }}
+    </h1>
     <div class="actions">
       <button (click)="deleteCandidate()" *ngIf="candidate.name.length > 0">
         <mat-icon>delete</mat-icon>
