--- a/src/app/common/nav/nav.component.html
+++ b/src/app/common/nav/nav.component.html
@@ -11,4 +11,7 @@
     <h1 routerLink="/partidos">Partidos Politicos</h1>
     <h1 routerLink="/estadisticas">Estadisticas</h1>
   </div>
+  <button (click)="logout()">
+    <mat-icon>logout</mat-icon>
+  </button>
 </div>
