--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,9 @@ body {
   color: white;
   font-size: 1.5rem;
 }
+.yellow-snackbar {
+  background: rgb(253, 135, 0);
+  font-family: $titleFont;
+  color: white;
+  font-size: 1.5rem;
+}
