--- a/src/app/partidos/partido-card/partido-card.component.html
+++ b/src/app/partidos/partido-card/partido-card.component.html
@@ -4,7 +4,7 @@
   [ngClass]="{ inactive: partido.status == false }"
 >
   <h1>{{ partido.name }}</h1>
-  <h1>{{ partido.description }}</h1>
+  <h1 class="description">{{ partido.description }}</h1>
   <!-- <p>{{ partido.status ? "Activo" : "Inactivo" }}</p> -->
   <p>{{ partido.creationDate }}</p>
 </div>
