--- a/src/app/partidos/partido-card/partido-card.component.scss
+++ b/src/app/partidos/partido-card/partido-card.component.scss
@@ -21,6 +21,10 @@
   p {
     margin: 0;
   }
+  h1.description {
+    font-size: 1.2rem;
+    font-weight: 400;
+  }
   h1 {
     font-size: 1.2rem;
   }
