--- a/src/app/votantes/create-votante/create-votante.component.html
+++ b/src/app/votantes/create-votante/create-votante.component.html
@@ -65,7 +65,7 @@
                 value="----"
                 [selected]="true"
                 [disabled]="true"
-                *ngIf="true"
+                *ngIf="voter.name.length == 0"
               >
                 Seleccione su genero
               </option>
